--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
     <link rel="stylesheet" href="./styles.css" />
-    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <!-- Lato fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic" rel="stylesheet" type="text/css">
+    <!-- ionicons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.0/css/ionicons.min.css"
+        integrity="sha512-JApjWRnfonFeGBY7t4yq8SWr1A6xVYEJgO/UMIYONxaR3C9GETKUg0LharbJncEzJF5Nmiv+Pr5QNulr81LjGQ=="
+        crossorigin="anonymous" />
 </head>
 
 <body>
@@ -36,8 +40,71 @@
             </div>
         </div>
     </div>
+
+    <div class="description-text-area-container">
+        <h1 class="title">
+            GET FOOD FAST &mdash; NOT FAST FOOD.
+        </h1>
+        <div class="title-bar"></div>
+        <p class="body">
+            Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for
+            cooking. So let us take care of that, we're really good at it, we promise!
+        </p>
     </div>
 
+    <div class="feature-cards-container">
+        <div class="feature-card">
+            <i class="ion-ios-infinite-outline"></i>
+            <h1 class="title">UP TO 365 DAYS/YEAR</h1>
+            <p class="text">Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+        </div>
+        <div class="feature-card">
+            <i class="ion-ios-stopwatch-outline"></i>
+            <h1 class="title">Ready in 20 minutes</h1>
+            <p class="text">You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.</p>
+        </div><div class="feature-card">
+            <i class="ion-ios-nutrition-outline"></i>
+            <h1 class="title">100% organic</h1>
+            <p class="text">All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!/p>
+        </div><div class="feature-card">
+            <i class="ion-ios-cart-outline"></i>
+            <h1 class="title">Order anything</h1>
+            <p class="text">We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+        </div>
+    </div>
+
+    <div class="food-display-grid-container">
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/1.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/2.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/3.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/4.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/5.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/6.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/7.jpg" />
+        </div>
+        <div class="img-container">
+            <img class="food-display-img" alt="food display image failed to load" src="./img/8.jpg" />
+        </div>
+    </div>
+
+    <div class="installation-container">
+        <h1 class="title">
+            How it works &mdash; Simple as 1, 2, 3
+        </h1>
+    </div>
 </body>
 
 </html>
