made a checkpoint before making background image for customer reviews

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="hero-container">
+    <div class="hero-container" name="top">
         <img class="hero-background-img" alt="background image failed to load" src="./img/hero.jpg" />
         <img class="app-logo" alt="app logo image failed to load" src="./img/logo-white.png" />
         <nav class="desktop-nav-bar-container">
@@ -56,20 +56,26 @@
         <div class="feature-card">
             <i class="ion-ios-infinite-outline"></i>
             <h1 class="title">UP TO 365 DAYS/YEAR</h1>
-            <p class="text">Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.</p>
+            <p class="text">Never cook again! We really mean that. Our subscription plans include up to 365 days/year
+                coverage. You can also choose to order more flexibly if that's your style.</p>
         </div>
         <div class="feature-card">
             <i class="ion-ios-stopwatch-outline"></i>
             <h1 class="title">Ready in 20 minutes</h1>
-            <p class="text">You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.</p>
-        </div><div class="feature-card">
+            <p class="text">You're only twenty minutes away from your delicious and super healthy meals delivered right
+                to your home. We work with the best chefs in each town to ensure that you're 100% happy.</p>
+        </div>
+        <div class="feature-card">
             <i class="ion-ios-nutrition-outline"></i>
             <h1 class="title">100% organic</h1>
-            <p class="text">All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!/p>
-        </div><div class="feature-card">
+            <p class="text">All our vegetables are fresh, organic and local. Animals are raised without added hormones
+                or antibiotics. Good for your health, the environment, and it also tastes better!/p>
+        </div>
+        <div class="feature-card">
             <i class="ion-ios-cart-outline"></i>
             <h1 class="title">Order anything</h1>
-            <p class="text">We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!</p>
+            <p class="text">We don't limit your creativity, which means you can order whatever you feel like. You can
+                also choose from our menu containing over 100 delicious meals. It's up to you!</p>
         </div>
     </div>
 
@@ -100,10 +106,117 @@
         </div>
     </div>
 
-    <div class="installation-container">
+    <div class="steps-bar-container">
         <h1 class="title">
             How it works &mdash; Simple as 1, 2, 3
         </h1>
+        <div class="img-container">
+            <img class="app-img" alt="app image failed to load" src="./img/app-iPhone.png" />
+        </div>
+        <div class="steps-container">
+            <ol class="steps-text">
+                <li>Choose the subscription plan that best fits your needs and sign up today.</li>
+                <li>Order your delicious meal using our mobile app or website. Or you can even call us!</li>
+                <li>Enjoy your meal after less than 20 minutes. See you the next time!</li>
+            </ol>
+            <div class="download-img-box-container">
+                <div class="img-container">
+                    <img class="apple-download-img" alt="download image failed to load" src="./img/download-app.svg" />
+                </div>
+                <div class="img-container">
+                    <img class="android-download-img" alt="download image failed to load"
+                        src="./img/download-app-android.png" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="location-bar-container">
+        <h1 class="location-bar-title">WE'RE CURRENTLY IN THESE CITIES</h1>
+        <div class="location-card">
+            <div class="location-img-container">
+                <img class="location-img" alt="location image failed to load" src="./img/lisbon-3.jpg" />
+            </div>
+            <h1 class="location">LISBON</h1>
+            <ul class="location-description">
+                <li> <i class="ion-ios-person"></i><span>1600+ happy eaters</span></li>
+                <li> <i class="ion-ios-star"></i><span>60+ top chefs</span></li>
+                <li> <i class="ion-social-twitter"></i><a href="#top">@omnifood_lx</a></li>
+            </ul>
+        </div>
+        <div class="location-card">
+            <div class="location-img-container">
+                <img class="location-img" alt="location image failed to load" src="./img/san-francisco.jpg" />
+            </div>
+            <h1 class="location">SAN FRANCISCO</h1>
+            <ul class="location-description">
+                <li> <i class="ion-ios-person"></i><span>3700+ happy eaters</span></li>
+                <li> <i class="ion-ios-star"></i><span>160+ top chefs</span></li>
+                <li> <i class="ion-social-twitter"></i><a href="#top">@omnifood_sf</a></li>
+            </ul>
+        </div>
+        <div class="location-card">
+            <div class="location-img-container">
+                <img class="location-img" alt="location image failed to load" src="./img/berlin.jpg" />
+            </div>
+            <h1 class="location">BERLIN</h1>
+            <ul class="location-description">
+                <li> <i class="ion-ios-person"></i><span>2300+ happy eaters</span></li>
+                <li> <i class="ion-ios-star"></i><span>110+ top chefs</span></li>
+                <li> <i class="ion-social-twitter"></i><a href="#top">@omnifood_berlin</a></li>
+            </ul>
+        </div>
+        <div class="location-card">
+            <div class="location-img-container">
+                <img class="location-img" alt="location image failed to load" src="./img/london.jpg" />
+            </div>
+            <h1 class="location">LONDON</h1>
+            <ul class="location-description">
+                <li> <i class="ion-ios-person"></i><span>1200+ happy eaters</span></li>
+                <li> <i class="ion-ios-star"></i><span>50+ top chefs</span></li>
+                <li> <i class="ion-social-twitter"></i><a href="#top">@omnifood_london</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="review-bar-container">
+        <img class="review-background-img" alt="background image failed to load" src="./img/back-customers.jpg" />
+        <div class="review-bar-text-container">
+            <div class="review-bar-title-container">
+                <h1 class="review-bar-title">OUR CUSTOMERS CAN'T LIVE WITHOUT US</h1>
+            </div>
+            <div class="review-cards-container">
+                <div class="review-card">
+                    <blockquote class="quote">Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!</blockquote>
+                    <div class="customer-card">
+                        <div class="customer-img-container">
+                            <img class="customer-img" alt="customer image failed to load" src="./img/customer-1.jpg" />
+                        </div>
+                        <p class="customer-name">Alberto Duncan</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <blockquote class="quote">Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!</blockquote>
+                    <div class="customer-card">
+                        <div class="customer-img-container">
+                            <img class="customer-img" alt="customer image failed to load" src="./img/customer-1.jpg" />
+                        </div>
+                        <p class="customer-name">Alberto Duncan</p>
+                    </div>
+                </div>
+                <div class="review-card">
+                    <blockquote class="quote">Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!</blockquote>
+                    <div class="customer-card">
+                        <div class="customer-img-container">
+                            <img class="customer-img" alt="customer image failed to load" src="./img/customer-1.jpg" />
+                        </div>
+                        <p class="customer-name">Alberto Duncan</p>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 </body>
 
