finished pricing bar

--- a/index.html
+++ b/index.html
@@ -245,19 +245,55 @@
         </div>
         <div class="pricing-cards-container">
             <div class="pricing-card">
-                <blockquote class="quote">Omnifood is just awesome! I just launched a startup which leaves me with no
-                    time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my
-                    daily meals!</blockquote>
-                <div class="customer-card">
-                    <div class="customer-img-container">
-                        <img class="customer-img" alt="customer image failed to load" src="./img/customer-1.jpg" />
-                    </div>
-                    <div class="customer-name-container">
-                        <p class="customer-name">Alberto Duncan</p>
-                    </div>
+                <div class="card-title">
+                    <h3>PREMIUM</h3>
+                    <h1>$399</h1><span> / month</span>
+                    <h5>That's only 13.30$ per meal</h5>
+                </div>
+                <ul class="card-body">
+                    <li><i class="ion-checkmark"></i>1 meal every day</li>
+                    <li><i class="ion-checkmark"></i>Order 24/7</li>
+                    <li><i class="ion-checkmark"></i>Access to newest creations</li>
+                    <li><i class="ion-checkmark"></i>Free delivery</li>
+                </ul>
+                <div class="card-button">
+                    <p>Sign up now</p>
+                </div>
+            </div>
+            <div class="pricing-card">
+                <div class="card-title">
+                    <h3>PRO</h3>
+                    <h1>$149</h1><span> / month</span>
+                    <h5>That's only $14.90 per meal</h5>
+                </div>
+                <ul class="card-body">
+                    <li><i class="ion-checkmark"></i>1 meal 10 days/month</li>
+                    <li><i class="ion-checkmark"></i>Order 24/7</li>
+                    <li><i class="ion-checkmark"></i>Access to newest creations</li>
+                    <li><i class="ion-checkmark"></i>Free delivery</li>
+                </ul>
+                <div class="card-button">
+                    <p>Sign up now</p>
+                </div>
+            </div>
+            <div class="pricing-card">
+                <div class="card-title">
+                    <h3>STARTER</h3>
+                    <h1>$19</h1><span> / meal</span>
+                    <h5 class="empty-text">place holder</h5>
+                </div>
+                <ul class="card-body">
+                    <li><i class="ion-checkmark"></i>1 meal</li>
+                    <li><i class="ion-checkmark"></i>Order from 8 am to 12 pm</li>
+                    <li><i class="ion-close"></i></li>
+                    <li><i class="ion-checkmark"></i>Free delivery</li>
+                </ul>
+                <div class="card-button">
+                    <p>Sign up now</p>
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
