finished the project

--- a/index.html
+++ b/index.html
@@ -294,6 +294,69 @@
             </div>
         </div>
     </div>
+
+    <div class="feedback-section-container">
+        <div class="feedback-section-title-container">
+            <h1 class="feedback-section-title">WE'RE HAPPY TO HEAR FROM YOU</h1>
+        </div>
+        <form>
+            <div class="mobile-feedback-form">
+                <div class="name-container">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Your name">
+                </div>
+                <div class="email-container">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="Your email">
+                </div>
+                <div class="media-container">
+                    <label for="media">How did you find us?</label>
+                    <select id="media" name="media">
+                        <option value="friends">Friends</option>
+                        <option value="search-engine">Search engine</option>
+                        <option value="advertisement">Advertisement</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+                <div class="checkbox-container">
+                    <p class="title">Newsletter?</p>
+                    <div class="checkbox-option-container">
+                        <input type="checkbox" id="newsletter" name="newsletter" value="yes" checked>
+                        <label for="newsletter"> Yes, please</label>
+                    </div>
+                </div>
+                <div class="message-container">
+                    <label for="message">Drop us a line</label>
+                    <textarea id="message" name="message" rows="4" placeholder="Your message"></textarea>
+                </div>
+            </div>
+            <div class="desktop-feedback-form">
+                <div class="question-container">
+                    <label for="name">Name</label>
+                    <label for="email">Email</label>
+                    <label for="media">How did you find us?</label>
+                    <p class="title">Newsletter?</p>
+                    <label for="message">Drop us a line</label>
+                </div>
+                <div class="input-container">
+                    <input type="text" id="name" name="name" placeholder="Your name">
+                    <input type="email" id="email" name="email" placeholder="Your email">
+                    <select id="media" name="media">
+                        <option value="friends">Friends</option>
+                        <option value="search-engine">Search engine</option>
+                        <option value="advertisement">Advertisement</option>
+                        <option value="other">Other</option>
+                    </select>
+                    <div class="checkbox-option-container">
+                        <input type="checkbox" id="newsletter" name="newsletter" value="yes" checked>
+                        <label for="newsletter"> Yes, please</label>
+                    </div>
+                    <textarea id="message" name="message" rows="4" placeholder="Your message"></textarea>
+                </div>
+            </div>
+            <input class="submit-button" type="submit" value="Send it!">
+        </form>
+    </div>
 </body>
 
 </html>
